docs/assets/css/swingletree.scss
---
# Swingletree page custom css
---

html {
  font-size: .8em;
}

h1,h2,h3,h4 {
  &.underline {
    border-bottom: 2px dotted #ddd;
    //text-align: center;
    padding-bottom: 0.2em;
    margin-bottom: 1.2em;
  }
}

.separator {
  padding-top: 1.5em;
}

.fas,.fab {
  &.feat {
    color: #61828f;
  }
}

